# decds

./: Cargo.toml  Makefile  README.md  test_decds_on_linux.sh
.cargo/: config.toml
.github/workflows/: test_ci.yml
assets/: decds-hands-on-experience.asciinema.cast
benches/: build_blob.rs  repair_blob.rs
decds-bin/: Cargo.toml
decds-bin/src/: errors.rs  main.rs  utils.rs
decds-bin/src/handlers/: handle_break.rs  handle_repair.rs  handle_verify.rs  mod.rs
decds-lib/: Cargo.toml
decds-lib/benches/: build_blob.rs  repair_blob.rs
decds-lib/src/: blob.rs  chunk.rs  chunkset.rs  consts.rs  errors.rs  lib.rs  merkle_tree.rs  tests.rs
scripts/: asciinema_pipeline.sh
shelby_client/: Cargo.toml
shelby_client/src/: blob.rs  chunk.rs  chunkset.rs  errors.rs  lib.rs  merkle_tree.rs
src/: blob.rs  chunk.rs  chunkset.rs  consts.rs  errors.rs  lib.rs  merkle_tree.rs
