[package]
name = "decds-bin"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "A Distribued Erasure-Coded Data Storage System"
rust-version = "1.85.0"

[dependencies]
clap = { version = "=4.5.41", features = ["derive"] }
rand = "=0.9.1"
const-hex = "=1.14.1"
decds-lib = { version = "=0.1.0", path = "../decds-lib" }
