[package]
name = "decds"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "A Distributed Erasure-Coded Data Storage System"
rust-version = "1.85.0"

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
const-hex = { workspace = true }
blake3 = { workspace = true }
decds-lib = { version = "=0.1.0", path = "../decds-lib" }
