[package]
name = "decds"
description = "A CLI for Distributed Erasure-Coded Data Storage System"
resolver = "3"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
const-hex = { workspace = true }
blake3 = { workspace = true }
decds-lib = { version = "=0.1.0", path = "../decds-lib" }
