[package]
name = "decds-lib"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"

[dependencies]
blake3 = { workspace = true }
rlnc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
divan = "=0.1.21"

[[bench]]
name = "build_blob"
harness = false

[[bench]]
name = "repair_blob"
harness = false
