[package]
name = "decds-lib"
description = "A Library for Distributed Erasure-Coded Data Storage System"
resolver = "3"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
blake3 = { workspace = true }
rlnc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
divan = "=0.1.21"

[[bench]]
name = "build_blob"
harness = false

[[bench]]
name = "repair_blob"
harness = false
